# financial-rag-assistant

./: .gitignore  Dockerfile  README.md  app.py  conftest.py  docker-compose.yml  dockerignore  pyproject.toml  railway.json  railway.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
data/processed/: apple_chunks.json  microsoft_chunks.json  tesla_chunks.json
notebooks/: 01_data_exploration.ipynb  02_retrieval_analysis.ipynb  03_evaluation_benchmark.ipynb
src/api/: api.py
src/embeddings/: embeddings.py
src/evaluation/: evaluator.py  guardrails.py
src/ingestion/: downloader.py  processor.py
src/pipeline/: pipeline.py
src/retrieval/: bm25_index.py  query_expander.py  retriever.py
src/utils/: logger.py
streamlit/: config.toml
tests/: test_bm25.py  test_evaluation.py  test_ingestion.py  test_pipeline.py
